index page static content is ready

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,6 +1,11 @@
 <lift:surround with="default" at="content">
     <form class="lift:form.ajax">
         <div class="lift:AnalyticsLoader">
+            <table class="pull-right" style="margin-bottom: 40px">
+            <tr><td style="padding-right:20px"><strong>From:</strong></td><td><span name="startDate"/></td></tr>
+            <tr><td style="padding-right:20px"><strong>To:</strong></td><td><span name="endDate"/></td></tr>
+            </table>
+            <span name="dataName"/>
             <span id ="dataBoard"><span name="dataBoard"/></span>
         </div>
     </form>
