--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -47,25 +47,31 @@
             height: 100px;
             float:left;
             margin-right: 20px;
+            margin-bottom: 20px;
         }
         .masthead h2 {
             padding-top: 20px;
         }
+
+        .notop {
+            border-color: white !important;
+        }
+
     </style>
 </head>
 <body>
     <script src="js/bootstrap.min.js"></script>
     <div class="container-narrow">
         <div class="masthead clearfix">
-            <ul class="nav nav-pills pull-right">
-                <li><a href="/">Useful link 1</a></li><br/>
-                <li><a href="/">Useful link 2</a></li><br/>
-                <li><a href="/">Useful link 3</a></li>
-            </ul>
+            <!--<ul class="nav nav-pills pull-right">-->
+                <!--<li><a href="/">Useful link 1</a></li><br/>-->
+                <!--<li><a href="/">Useful link 2</a></li><br/>-->
+                <!--<li><a href="/">Useful link 3</a></li>-->
+            <!--</ul>-->
             <a href="/">
-            <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/0/08/Colored_pencils_chevre.jpg/800px-Colored_pencils_chevre.jpg"
+            <img src="http://farm4.staticflickr.com/3718/10490809113_e772f7a243_o.png"
                  class="img-rounded img-title"/></a>
-            <a href="/"><h2 class="muted nounderline">Name of the awesome application</h2></a>
+            <!--<a href="/"><h2 class="muted nounderline">Name of the awesome application</h2></a>-->
         </div>
 
         <!--<hr/>-->
