view different views

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,7 +6,10 @@
             <tr><td style="padding-right:20px"><strong>To:</strong></td><td><span name="endDate"/></td></tr>
             </table>
             <span name="dataName"/>
+            <span id ="backButton"><span name="backButton"/></span>
+            <span id ="selectView"><span name="selectView"/></span>
             <span id ="dataBoard"><span name="dataBoard"/></span>
+            <span id ="backButton2"><span name="backButton2"/></span>
         </div>
     </form>
 </lift:surround>
