--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -63,11 +63,11 @@
     <script src="js/bootstrap.min.js"></script>
     <div class="container-narrow">
         <div class="masthead clearfix">
-            <!--<ul class="nav nav-pills pull-right">-->
-                <!--<li><a href="/">Useful link 1</a></li><br/>-->
+            <ul class="nav nav-pills pull-right">
+                <li><a href="/view">Edit Views</a></li><br/>
                 <!--<li><a href="/">Useful link 2</a></li><br/>-->
                 <!--<li><a href="/">Useful link 3</a></li>-->
-            <!--</ul>-->
+            </ul>
             <a href="/">
             <img src="http://farm4.staticflickr.com/3718/10490809113_e772f7a243_o.png"
                  class="img-rounded img-title"/></a>
