--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -57,6 +57,14 @@
             border-color: white !important;
         }
 
+        .layoutBtn {
+            margin: 3px;
+        }
+
+        .rightNeibour {
+            margin-left: 10px;
+        }
+
     </style>
 </head>
 <body>
@@ -64,9 +72,8 @@
     <div class="container-narrow">
         <div class="masthead clearfix">
             <ul class="nav nav-pills pull-right">
-                <li><a href="/view">Edit Views</a></li><br/>
-                <!--<li><a href="/">Useful link 2</a></li><br/>-->
-                <!--<li><a href="/">Useful link 3</a></li>-->
+                <li><a href="/views">Edit Views</a></li><br/>
+                <li><a href="/rules">Edit Rules</a></li><br/>
             </ul>
             <a href="/">
             <img src="http://farm4.staticflickr.com/3718/10490809113_e772f7a243_o.png"
